syntax = "proto3";

// command to generate
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./users/gluserpb/user.proto

package gluserpb;
option go_package = "github.com/odit-bit/sone/users/gluserpb";


service GoogleUserService{
    rpc Get(GetRequest) returns (GetResponse) {};
    rpc Save(SaveRequest) returns (SaveResponse) {};
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    bool isEmailVerified = 4;
    bool IsFound = 5;
}


message SaveRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    bool isEmailVerified = 4;
}

message SaveResponse {
}